--- a/Realimaze/Realimaze/Realimaze.vcxproj
+++ b/Realimaze/Realimaze/Realimaze.vcxproj
@@ -79,11 +79,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Engine.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="stb_image.c" />
+    <ClCompile Include="WallList.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Circle.h" />
+    <ClInclude Include="Engine.h" />
+    <ClInclude Include="Line.h" />
+    <ClInclude Include="Shape.h" />
     <ClInclude Include="stb_image.h" />
+    <ClInclude Include="Vector2D.h" />
+    <ClInclude Include="WallList.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
