--- a/Realimaze/Realimaze/Realimaze.vcxproj
+++ b/Realimaze/Realimaze/Realimaze.vcxproj
@@ -79,8 +79,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Ball.cpp" />
-    <ClCompile Include="Circle.cpp" />
+    <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Line.cpp" />
     <ClCompile Include="Manager.cpp" />
@@ -94,8 +93,7 @@
     <ClCompile Include="Vector3D.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Ball.h" />
-    <ClInclude Include="Circle.h" />
+    <ClInclude Include="Sphere.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Line.h" />
     <ClInclude Include="Manager.h" />
