--- a/Realimaze/Realimaze/Realimaze.vcxproj.filters
+++ b/Realimaze/Realimaze/Realimaze.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="Sphere.cpp">
       <Filter>Source Files\Physics Engine</Filter>
     </ClCompile>
+    <ClCompile Include="ObjModel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stb_image.h">
@@ -91,6 +94,9 @@
     </ClInclude>
     <ClInclude Include="Sphere.h">
       <Filter>Header Files\Physics Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjModel.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
