center blob control mechanism, video ON/OFF switch on X key

--- a/Realimaze/Realimaze/Realimaze.vcxproj
+++ b/Realimaze/Realimaze/Realimaze.vcxproj
@@ -98,6 +98,7 @@
   <ItemGroup>
     <ClInclude Include="Ball.h" />
     <ClInclude Include="Font.h" />
+    <ClInclude Include="globaldefines.h" />
     <ClInclude Include="Glyph.h" />
     <ClInclude Include="Manager.h" />
     <ClInclude Include="Maze.h" />
