--- a/Realimaze/Realimaze/Realimaze.vcxproj
+++ b/Realimaze/Realimaze/Realimaze.vcxproj
@@ -52,22 +52,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-<<<<<<< ours
       <AdditionalIncludeDirectories>C:\opencv\build\include;C:\opencv\build\include\opencv2;C:\opencv\build\include\opencv;C:\glut-3.7.6-bin</AdditionalIncludeDirectories>
-=======
-      <AdditionalIncludeDirectories>C:\Users\Bas\Documents\school\jaar 2\periode 4\Realimaze\Realimaze\glut-3.7.6-bin</AdditionalIncludeDirectories>
->>>>>>> theirs
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-<<<<<<< ours
       <AdditionalLibraryDirectories>C:\opencv\build\x86\vc12\lib;C:\glut-3.7.6-bin</AdditionalLibraryDirectories>
       <AdditionalDependencies>glut32.lib;opengl32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;opencv_calib3d249d.lib;opencv_contrib249d.lib;opencv_core249d.lib;opencv_features2d249d.lib;opencv_flann249d.lib;opencv_gpu249d.lib;opencv_highgui249d.lib;opencv_imgproc249d.lib;opencv_legacy249d.lib;opencv_ml249d.lib;opencv_nonfree249d.lib;opencv_objdetect249d.lib;opencv_ocl249d.lib;opencv_photo249d.lib;opencv_stitching249d.lib;opencv_superres249d.lib;opencv_ts249d.lib;opencv_video249d.lib;opencv_videostab249d.lib;%(AdditionalDependencies)</AdditionalDependencies>
-=======
-      <AdditionalLibraryDirectories>C:\Users\Bas\Documents\school\jaar 2\periode 4\Realimaze\Realimaze\glut-3.7.6-bin</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glut32.lib;opengl32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
->>>>>>> theirs
     </Link>
     <ProjectReference>
       <UseLibraryDependencyInputs>true</UseLibraryDependencyInputs>
@@ -91,15 +82,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-<<<<<<< ours
     <ClCompile Include="Ball.cpp" />
+    <ClCompile Include="EnginePhys.cpp" />
     <ClCompile Include="Font.cpp" />
     <ClCompile Include="Glyph.cpp" />
-=======
     <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Line.cpp" />
->>>>>>> theirs
     <ClCompile Include="Manager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Maze.cpp" />
@@ -107,35 +96,29 @@
     <ClCompile Include="Orientation.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="stb_image.c" />
-<<<<<<< ours
     <ClCompile Include="Texture.cpp" />
-=======
-    <ClCompile Include="Vector2D.cpp" />
-    <ClCompile Include="Vector3D.cpp" />
->>>>>>> theirs
   </ItemGroup>
   <ItemGroup>
-<<<<<<< ours
     <ClInclude Include="Ball.h" />
+    <ClInclude Include="EnginePhys.h" />
     <ClInclude Include="Font.h" />
     <ClInclude Include="Glyph.h" />
-=======
+    <ClCompile Include="Vector2D.cpp" />
+    <ClCompile Include="Vector3D.cpp" />
+  </ItemGroup>
+  <ItemGroup>
     <ClInclude Include="Sphere.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Line.h" />
->>>>>>> theirs
     <ClInclude Include="Manager.h" />
     <ClInclude Include="Maze.h" />
     <ClInclude Include="ObjectLoader.h" />
     <ClInclude Include="Orientation.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="stb_image.h" />
-<<<<<<< ours
     <ClInclude Include="Texture.h" />
-=======
     <ClInclude Include="Vector2D.h" />
     <ClInclude Include="Vector3D.h" />
->>>>>>> theirs
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
